--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
         <h2 class="featurette-heading">Social Media! <span class="text-muted">The Virtual world.</span>
         </h2>
         <p class="lead"> The term “viral” or “go viral” means the content has become very popular on social media.
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur dicta voluptate ratione alias! Repellat sed, cum obcaecati eos, quae error harum culpa repudiandae minus veritatis ipsa rem corporis asperiores perspiciatis!</p>
         </p>
       </div>
       <div class="col-md-5">
