--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
       <div class="col-md-7">
         <h2 class="featurette-heading">Social Media! <span class="text-muted">The Virtual world.</span>
         </h2>
-        <p class="lead"> The term “viral” or “go viral” means the content has become very popular on social media.
+        <p class="lead"> The term “viral” or “go viral” means the content has become very popular on social media.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur dicta voluptate ratione alias! Repellat sed, cum obcaecati eos, quae error harum culpa repudiandae minus veritatis ipsa rem corporis asperiores perspiciatis!</p>
-        </p>
+          <h3>Salil and Prashant are roomates</h3>
       </div>
       <div class="col-md-5">
         <img class="rounded mx-auto d-block border border-danger img-fluid" src="https://source.unsplash.com/500x400/?socialmedia"
